--- a/env.php.example
+++ b/env.php.example
@@ -32,6 +32,8 @@ if (!getenv('PHP_OAUTH_CONSUMER_TOKEN')) {
         @putenv('NLM_EMAIL=xxxxx');
         // This is for doing git pull.  Not needed for bot itself
         @putenv('GITHUB_PAT=xxxxx');
+        // This is the password to use when visiting https://citation.toolforge.org/gitpull.php?password=xxxxx in order to deploy the bot's latest code from GitHub to Toolforge. This keeps random people from being able to deploy the bot.
+        @putenv('DEPLOY_PASSWORD=xxxxx');
     } catch (Throwable $e) {
         echo 'Error in env.php';
     }
