--- a/env.php.example
+++ b/env.php.example
@@ -30,6 +30,8 @@ if (!getenv('PHP_OAUTH_CONSUMER_TOKEN')) {
         // API key and email address for *nlm.nih.gov, can be obtained at https://account.ncbi.nlm.nih.gov/settings/
         @putenv('NLM_APIKEY=xxxxx');
         @putenv('NLM_EMAIL=xxxxx');
+        // This is the password to use when visiting https://citation.toolforge.org/gitpull.php?password=xxxxx in order to deploy the bot's latest code from GitHub to Toolforge. This keeps random people from being able to deploy the bot.
+        @putenv('DEPLOY_PASSWORD=xxxxx');
     } catch (Throwable $e) {
         echo 'Error in env.php';
     }
